workloads/discord-bot/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: discord-bot-service
  namespace: discord-bot
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      name: http
  selector:
    app: discord-bot
