workloads/discord-bot/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: discord-bot-ingress
  namespace: discord-bot
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - discord-bot
  defaultBackend:
    service:
      name: discord-bot-service
      port:
        number: 8080
